--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <input type="button" value="x" onclick="mult()">
     <input type="button" value="/" onclick="divi()">
     
-
+    <p>from Lucas Deodato</p>
     <script src="app.js"></script>
 </body>
 </html>
